--- a/style.css
+++ b/style.css
@@ -14,10 +14,10 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     min-height: 100vh;
-    color: #fff; /* весь текст белый */
+    color: #fff; 
 }
 
-/* Сам header */
+
 .header-boxed {
     display: flex;
     align-items: center;
@@ -26,17 +26,17 @@ body {
     color: #fff;
 }
 
-/* Контейнер лого с закр краями 
+/* Контейнер логотипа с закруглённым прямоугольником 
 .logo-container {
     background: rgba(255, 255, 255, 0.2); 
     border-radius: 15px;
     padding: 10px 15px; 
     display: flex;
     align-items: center;
-    justify-content: center; ОТКЛЮЧЕНО
+    justify-content: center; отКЛЮЧЕНО */
 }
  
-/* Большое лого */
+
 .logo-big {
     width: 130px;   
     height: 70px;
@@ -44,7 +44,7 @@ body {
     border-radius: 0px;
 }
 
-/* Текст рядом с лого */
+/* Текст рядом с логотипом */
 .header-text h1,
 .header-text p {
     margin: 0;
@@ -61,15 +61,35 @@ body {
 }
 
 .container {
-    max-width: 900px;
+    max-width: 1200px; /* увеличиваем для 4 товаров */
     margin: 0 auto;
     padding: 20px;
 }
 
+/* Каталог товаров */
 .catalog {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-template-columns: repeat(4, 1fr); /* 4 товара в ряд */
     gap: 20px;
+}
+
+/* под разные экраны 4 на пк и 1 на телефоне  */
+@media (max-width: 1200px) {
+    .catalog {
+        grid-template-columns: repeat(3, 1fr); /* 3 товара */
+    }
+}
+
+@media (max-width: 900px) {
+    .catalog {
+        grid-template-columns: repeat(2, 1fr); /* 2 товара */
+    }
+}
+
+@media (max-width: 600px) {
+    .catalog {
+        grid-template-columns: 1fr; /* 1 товар на телефонах */
+    }
 }
 
 /* Карточка товара */
@@ -92,9 +112,9 @@ body {
 
 .item-content {
     padding: 15px;
-    flex: 1;                  /* растяyenm плашку по высоте */
+    flex: 1;                  
     display: flex;
-    flex-direction: column;   
+    flex-direction: column;   /* чтобы кнопка была внизу */
 }
 
 .item-title {
@@ -118,7 +138,7 @@ body {
     text-decoration: none;
     border-radius: 5px;
     transition: 0.3s;
-    margin-top: auto; /* чтоб кнопка всегда снизу была*/
+    margin-top: auto; /* кнопку вниз при любом опсании*/
 }
 
 .item-button:hover {
@@ -131,3 +151,4 @@ footer {
     font-size: 14px;
     color: #fff;
 }
+
