--- a/style.css
+++ b/style.css
@@ -25,16 +25,6 @@ body {
     gap: 20px;
     color: #fff;
 }
-
-/* Контейнер логотипа с закруглённым прямоугольником 
-.logo-container {
-    background: rgba(255, 255, 255, 0.2); 
-    border-radius: 15px;
-    padding: 10px 15px; 
-    display: flex;
-    align-items: center;
-    justify-content: center; отКЛЮЧЕНО */
-}
  
 
 .header-boxed {
@@ -45,14 +35,14 @@ body {
     max-width: 100%;
 }
 
-.logo-container {
-    flex: 0 0 auto; /* контейнер не растягивается */
+.logo-container
+    flex: 0 0 auto; /* контейнер не растягивается 
     background: rgba(255,255,255,0.2);
     border-radius: 15px;
     padding: 10px 15px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: center; */
 }
 
 .logo-big {
