--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
 
 .logo-container
     flex: 0 0 auto; 
-    backgrod: rgba(255,255,255,0.2);
+    background: rgba(0,0,0,0);
     border-radius: 15px;
     padding: 10px 15px;
     display: flex;
