--- a/style.css
+++ b/style.css
@@ -26,15 +26,15 @@ body {
     max-width: 100%;
 }
 
-/* Логотип в закруглённом прямоугольнике */
+/* Логотип в закруглённом прямоугольнике 
 .logo-container {
-    flex: 0 0 auto; /* не растягивается */
+    flex: 0 0 auto; /* не растягивается 
     background: rgba(255,255,255,0.2);
     border-radius: 15px;
     padding: 10px 15px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: center; */
 }
 
 /* Логотип */
