--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body {
 
 /* Контейнер сайта */
 .container {
-    max-width: 1200px; /* достаточно для 4 товаров */
+    max-width: 1200px; 
     margin: 0 auto;
     padding: 20px;
 }
@@ -86,7 +86,7 @@ body {
 
 /* Карточка товара */
 .item {
-    background: rgba(20, 60, 40, 0.3); 
+    background: rgba(255, 255, 255, 1); 
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0 4px 15px rgba(0,0,0,0.2);
