--- a/style.css
+++ b/style.css
@@ -221,8 +221,8 @@ footer {
     background: #ffffff;
     max-width: 1000px;
     width: 100%;
-    border-radius: 12px;
-    padding: 60px;
+    border-radius: 12px
+    padding: 20px 60px 60px 60px;
     box-shadow: 0 10px 40px rgba(0,0,0,0.2);
     color: #222;
 }
