--- a/style.css
+++ b/style.css
@@ -271,6 +271,6 @@ footer {
 }
 
 body {
-  cursor: url("cursor.png") 16 16, auto;
+  cursor: url("Picsart_26-02-12_18-29-18-194.png") 16 16, auto;
 }
 
