--- a/style.css
+++ b/style.css
@@ -19,6 +19,8 @@ body {
     background-attachment: fixed;
     min-height: 100vh;
     color: #fff;
+   cursor: url("Picsart_26-02-12_18-29-18-194.png") 16 16, auto;
+
 }
 
 /* =========================
